<resources>
    <string name="app_name">PrototypeBOE</string>
    <string name="title_activity_login">Log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for evidence navigation-->
    <string name="file">File #:</string>
    <string name="file_information">File information</string>
    <string name="folder">Folder</string>
    <string name="file_name">File name</string>
    <string name="comment">Comment</string>
    <string name="timestamps">Timestamps</string>
    <string name="block_chain">Blockchain</string>
    <string name="location_information">Location Information</string>
    <string name="technical_details">Technical details</string>
    <string name="actions">Actions</string>

</resources>
